Geometry node crash when muting a node #88588

Closed
opened 2021-05-26 09:55:32 +02:00 by Jesse Yurkovich · 6 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1070 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 466.27

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-05-25 18:37, hash: c0bb7d9cb7

Caused by b084b57fbf

Short description of error
For certain node graphs, muting a node will lead to a crash. It's been hard to determine the exact graph topology that's responsible but it may be when there are 2 nodes, each supporting multiple inputs, chained together with at least 1 common input between them. The repro makes it somewhat obvious the setup.

The file below uses a Boolean Intersect node, however, the same crash can be seen if you replace that boolean with a Join Geometry node for example.

Exact steps for others to reproduce the error
geo-crash-mute.blend

  • Load the attached .blend
  • Mute the boolean intersect node
  • Observe crash
ExceptionCode         : EXCEPTION_ACCESS_VIOLATION

Stack trace:
blender.exe         :0x00007FF6C70EC9C0  blender::move_assign_container<blender::Array<blender::SimpleMapSlot<enum GeometryComponentType,ble
blender.exe         :0x00007FF6C714AAC0  blender::Map<enum GeometryComponentType,blender::UserCounter<GeometryComponent>,4,blender::PythonPr
blender.exe         :0x00007FF6C76A6AB0  blender::uninitialized_move_n<GeometrySet>
blender.exe         :0x00007FF6C763F410  blender::modifiers::geometry_nodes::GeometryNodesEvaluator::execute
blender.exe         :0x00007FF6C763EF50  blender::modifiers::geometry_nodes::evaluate_geometry_nodes
blender.exe         :0x00007FF6C7578260  compute_geometry
blender.exe         :0x00007FF6C75796E0  modifyGeometry
blender.exe         :0x00007FF6C7358380  modifier_modify_mesh_and_geometry_set
blender.exe         :0x00007FF6C7356F80  mesh_calc_modifiers
blender.exe         :0x00007FF6C7356C80  mesh_build_data
blender.exe         :0x00007FF6C7359570  makeDerivedMesh
blender.exe         :0x00007FF6C7334CB0  BKE_object_handle_data_update
blender.exe         :0x00007FF6C73349E0  BKE_object_eval_uber_data
blender.exe         :0x00007FF6CB931A50  blender::deg::`anonymous namespace'::evaluate_node
blender.exe         :0x00007FF6CB931A00  blender::deg::`anonymous namespace'::deg_task_run_func
tbb.dll             :0x00007FFC802354A0  tbb::interface7::internal::isolate_within_arena
blender.exe         :0x00007FF6CBDBA1A0  tbb::internal::function_task<Task>::execute
tbb.dll             :0x00007FFC802454D0  tbb::recursive_mutex::scoped_lock::internal_try_acquire
tbb.dll             :0x00007FFC802454D0  tbb::recursive_mutex::scoped_lock::internal_try_acquire
blender.exe         :0x00007FF6C75E1E10  tbb::internal::task_group_base::wait
blender.exe         :0x00007FF6CB931590  blender::deg::deg_evaluate_on_refresh
blender.exe         :0x00007FF6C721B290  scene_graph_update_tagged
blender.exe         :0x00007FF6C73EE780  wm_event_do_notifiers
blender.exe         :0x00007FF6C73D87F0  WM_main
blender.exe         :0x00007FF6C7081DB0  main
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1070 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 466.27 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-05-25 18:37, hash: `c0bb7d9cb7` Caused by b084b57fbf **Short description of error** For certain node graphs, muting a node will lead to a crash. It's been hard to determine the exact graph topology that's responsible but it may be when there are 2 nodes, each supporting multiple inputs, chained together with at least 1 common input between them. The repro makes it somewhat obvious the setup. The file below uses a Boolean Intersect node, however, the same crash can be seen if you replace that boolean with a Join Geometry node for example. **Exact steps for others to reproduce the error** [geo-crash-mute.blend](https://archive.blender.org/developer/F10142695/geo-crash-mute.blend) - Load the attached .blend - Mute the boolean intersect node - Observe crash ``` ExceptionCode : EXCEPTION_ACCESS_VIOLATION Stack trace: blender.exe :0x00007FF6C70EC9C0 blender::move_assign_container<blender::Array<blender::SimpleMapSlot<enum GeometryComponentType,ble blender.exe :0x00007FF6C714AAC0 blender::Map<enum GeometryComponentType,blender::UserCounter<GeometryComponent>,4,blender::PythonPr blender.exe :0x00007FF6C76A6AB0 blender::uninitialized_move_n<GeometrySet> blender.exe :0x00007FF6C763F410 blender::modifiers::geometry_nodes::GeometryNodesEvaluator::execute blender.exe :0x00007FF6C763EF50 blender::modifiers::geometry_nodes::evaluate_geometry_nodes blender.exe :0x00007FF6C7578260 compute_geometry blender.exe :0x00007FF6C75796E0 modifyGeometry blender.exe :0x00007FF6C7358380 modifier_modify_mesh_and_geometry_set blender.exe :0x00007FF6C7356F80 mesh_calc_modifiers blender.exe :0x00007FF6C7356C80 mesh_build_data blender.exe :0x00007FF6C7359570 makeDerivedMesh blender.exe :0x00007FF6C7334CB0 BKE_object_handle_data_update blender.exe :0x00007FF6C73349E0 BKE_object_eval_uber_data blender.exe :0x00007FF6CB931A50 blender::deg::`anonymous namespace'::evaluate_node blender.exe :0x00007FF6CB931A00 blender::deg::`anonymous namespace'::deg_task_run_func tbb.dll :0x00007FFC802354A0 tbb::interface7::internal::isolate_within_arena blender.exe :0x00007FF6CBDBA1A0 tbb::internal::function_task<Task>::execute tbb.dll :0x00007FFC802454D0 tbb::recursive_mutex::scoped_lock::internal_try_acquire tbb.dll :0x00007FFC802454D0 tbb::recursive_mutex::scoped_lock::internal_try_acquire blender.exe :0x00007FF6C75E1E10 tbb::internal::task_group_base::wait blender.exe :0x00007FF6CB931590 blender::deg::deg_evaluate_on_refresh blender.exe :0x00007FF6C721B290 scene_graph_update_tagged blender.exe :0x00007FF6C73EE780 wm_event_do_notifiers blender.exe :0x00007FF6C73D87F0 WM_main blender.exe :0x00007FF6C7081DB0 main ```
Author
Member

Added subscriber: @deadpin

Added subscriber: @deadpin
Jesse Yurkovich changed title from Geometry node crash when muting boolean node to Geometry node crash when muting a node 2021-05-26 09:55:50 +02:00
Member

Added subscribers: @JacquesLucke, @lichtwerk

Added subscribers: @JacquesLucke, @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Sometimes it survives the mute here (so it might take multiple tries, but I get it, too):

BLI_assert failed: source/blender/modifiers/intern/MOD_nodes_evaluator.cc:942, assert_expected_outputs_have_been_computed(), at 'output_state.has_been_computed'

This has worked before, it is caused by b084b57fbf

CC @JacquesLucke

Sometimes it survives the mute here (so it might take multiple tries, but I get it, too): ``` BLI_assert failed: source/blender/modifiers/intern/MOD_nodes_evaluator.cc:942, assert_expected_outputs_have_been_computed(), at 'output_state.has_been_computed' ``` This has worked before, it is caused by b084b57fbf CC @JacquesLucke
Jacques Lucke self-assigned this 2021-05-26 12:00:11 +02:00

This issue was referenced by afec66c024

This issue was referenced by afec66c024dc2b75447537d45406c06342ec201e
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 3.0 milestone 2023-02-08 15:59:10 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#88588
No description provided.